--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,7 +67,7 @@ body {
 }
 
 .panel-title {
-    color:#1a1a1a;
+    color:#ffffff;
     font-size: 1.25rem;
     font-weight: 700;
     margin-bottom: 1rem;
@@ -166,7 +166,7 @@ body {
 }
 
 .slot {
-    width: 60px; height: 60px;
+    width: 40px; height: 40px;
     background: #333;
     border: 2px solid #5a5a5a;
     border-radius: 8px;
@@ -200,30 +200,30 @@ body {
 
 /* Buttons */
 .menu-btn {
-  background-color: FFD700;
-  color: black;
-  padding: 28px 56px;
-  font-size: 30px;
-  border-width: 12px;
-  cursor: pointer;
-  transition: 0.4s ease;
+    background-color: FFD700;
+    color: black;
+    padding: 20px 40px;
+    font-size: 22px;
+    border-width: 10px;
+    cursor: pointer;
+    transition: 0.4s ease;
 }
 
 .menu-btn:hover {
-  background-color: FF9000;
-  cursor: pointer;
-  transform: scale(0.95);
+    background-color: FF9000;
+    cursor: pointer;
+    transform: scale(0.95);
 }
 
-/* Make a display class to make better alert messages. */
+/* To hide elements, will be useful in various classes. */
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /* Menus Styling */
 .initial-menu {
     position: absolute; 
-    top: 6rem; /* Original 14 rem */
+    top: 6rem;
     left: 30rem;
     display: flex; 
     flex-direction: column; 
@@ -243,11 +243,51 @@ body {
     gap: 15px;
     min-width: 280px;
     border: 2px solid #4ade80;
+    width: 20rem; 
+    max-width: 85%; /* Responsive on small screens. */ 
+}
+
+.pause-menu {
+    position: absolute; 
+    top: 4rem;
+    left: 30rem;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    z-index: 104;
+    font-family: Arial, sans-serif;
+}
+
+.controls-menu {
+    position: absolute; 
+    top: 2rem;
+    left: 17rem;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    z-index: 102;
+    font-family: Arial, sans-serif;
+}
+
+.controls-menu-container {
+    background-color: rgba(10, 20, 30, 0.95); 
+    padding: 1rem 1rem; 
+    border-radius: 12px; 
+    box-shadow: 0 8px 15px rgba(0,0,0,0.7); 
+    display: flex; 
+    flex-direction: column; 
+    gap: 0.1rem;
+    min-width: 10rem;
+    border: 2px solid #4ade80;
+    width: 20rem; 
+    max-width: 85%; /* Responsive on small screens. */ 
 }
 
 .session-name-prompt {
     position: absolute; 
-    top: 6rem; /* Original = 16rem */
+    top: 6rem;
     left: 30rem;
     display: flex; 
     flex-direction: column; 
@@ -255,6 +295,91 @@ body {
     justify-content: center; 
     z-index: 103;
     font-family: Arial, sans-serif;
+}
+
+/* Chat Box Styling */
+.dialog-box {
+    display: flex;
+    position: absolute;
+    top: 28rem;
+    left: -1rem;
+    width: 50rem;
+    height: 10rem;
+    padding: 0.375rem;
+    box-sizing: border-box;
+    
+    background-color: rgba(10, 20, 30, 0.9); 
+    
+    border: 0.25rem solid #7a7a7a;
+    border-radius: 0.75rem;
+    
+    box-shadow: 0 0 0 0.25rem #222,
+    inset 0 0 0 0.125rem rgba(255, 255, 255, 0.2),
+    0 0.625rem 1.875rem rgba(0, 0, 0, 0.5);
+    
+    position: relative;
+}
+
+.dialog-speaker {
+    color: #f59e0b; 
+    font-size: 1.375rem;
+    font-weight: bold;
+    font-family: 'Garamond', 'Georgia', serif;
+    margin: 0 0 0.9375rem 0;
+    padding: 0;
+}
+
+.dialog-text {
+    color: white;
+    font-size: 1.25rem;
+    font-family: 'Garamond', 'Georgia', serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+}
+
+.dialog-next-indicator {
+    position: absolute;
+    bottom: 0.9375rem;
+    right: 1.5625rem;
+    font-size: 1.875rem;
+    color: white;
+    animation: bounce 0.8s infinite;
+}
+
+#talk-portrait {
+    /* Prevents the browser from smoothing the pixels */
+    image-rendering: pixelated;       /* Standard for Chrome/Edge/modern browsers */
+    image-rendering: -moz-crisp-edges; /* Firefox specific */
+    image-rendering: crisp-edges;      /* Standard future compatibility */
+
+    width: 8rem;
+    height: 8rem;
+    border: 0.2rem solid;
+    border-color: var(--color-green);
+    border-radius: 8px;
+    flex-shrink: 0;
+}
+
+/* Animation for bounding effect of chat box arrow. */
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-0.5rem);
+    }
+}
+
+.horizontal-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.vertical-container {
+    display: flex;
+    flex-direction: column;
 }
 
 
